GNOME Bugzilla – Bug 736739
audiocdsrc: do not leak uid after parsing TOC select event
Last modified: 2014-09-17 07:26:12 UTC
Created attachment 286286 [details] [review] audiocdsrc: do not leak uid after parsing TOC select event The uid string is leaked when parsing the TOC select event
Created attachment 286287 [details] [review] event: add annotations to gst_event_parse_toc_select()
Created attachment 286291 [details] [review] flacparse: do not leak uid after parsing TOC event
commit add8f02703f98e658e62ba972f4e3b0990c8b631 Author: Ognyan Tonchev <ognyan@axis.com> Date: Tue Sep 16 13:32:52 2014 +0200 audiocdsrc: do not leak uid after parsing TOC select event https://bugzilla.gnome.org/show_bug.cgi?id=736739 commit 343007894e4c4f5d320105eaa4c932896b763787 Author: Ognyan Tonchev <ognyan@axis.com> Date: Tue Sep 16 13:48:18 2014 +0200 event: add annotations to gst_event_parse_toc_select() https://bugzilla.gnome.org/show_bug.cgi?id=736739 commit 7cd335e9b9d361a8149bb65f3c545df50e24abd9 Author: Ognyan Tonchev <ognyan@axis.com> Date: Tue Sep 16 14:26:08 2014 +0200 flacparse: do not leak uid after parsing TOC event https://bugzilla.gnome.org/show_bug.cgi?id=736739