audiocdsrc: do not leak uid after parsing TOC select event

https://bugzilla.gnome.org/show_bug.cgi?id=736739